fix: [PL-20661]: loader and spacing fixes on product page (#5961)
* fix: [PL-20661]: Fixing loader issue on products page

* fix: Header spacing fix

--- a/src/modules/45-projects-orgs/pages/projects/ProjectsPage.module.scss
+++ b/src/modules/45-projects-orgs/pages/projects/ProjectsPage.module.scss
@@ -23,7 +23,7 @@
   }
 
   .header {
-    padding: var(--spacing-large) var(--spacing-xxxlarge) !important;
+    padding: var(--spacing-large) var(--spacing-xlarge) !important;
     border-bottom: 1px solid var(--grey-200);
     background: var(--white) !important;
 
